--- a/slider.css
+++ b/slider.css
@@ -1,11 +1,11 @@
 /* стили основного контейнера слайдера */
-.slider {
+/* .slider {
   position: relative;
   overflow: hidden;
   max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 /* стили для обёртки, в которой заключены слайды */
 .slider__wrapper {
