--- a/style.css
+++ b/style.css
@@ -273,3 +273,11 @@ footer {
     background-color: #282c34;
     margin: 0 auto;
 }
+
+footer a {
+    display: block;
+}
+
+footer img {
+    height: 40px;
+}
