--- a/repair-apple-watch.css
+++ b/repair-apple-watch.css
@@ -2,18 +2,18 @@
     box-sizing: border-box;
 }
 
-h1 {
+main h1 {
     font-size: 2.5rem;
     text-align: center;
     font-weight: bold;
 }
 
-h2 {
+main h2 {
     font-size: 1.3rem;
     text-align: center;
 }
 
-h3 {
+main h3 {
     font-size: 1.3rem;
     margin-top: 5px;
 }
